# PyDGLab-WS

./: .coveragerc  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/actions/setup-python/: action.yml
.github/workflows/: codecov.yml  docs.yml  release.yml
docs/examples/: server_with_local_client.py
docs/zh/: about-dg-lab.md  index.md  more.md  usage.md
docs/zh/api/: enums.md  exceptions.md  models.md  typing.md  utils.md
docs/zh/api/client/: base.md  connect.md  local.md  ws.md
docs/zh/api/server/: server.md
docs/zh/examples/: add-pulses.md  server.md  server_with_local_client.md  ws_client.md
docs/zh/usage/: server.md
docs/zh/usage/client/: base.md  local.md  ws.md
examples/: add_pulses.py  local_client_with_server.py  server.py  server_with_local_client.py  ws_client.py
master/: 404.html  index.html  objects.inv  sitemap.xml
master/about-dg-lab/: index.html
master/api/client/base/: index.html
master/api/client/connect/: index.html
master/api/client/local/: index.html
master/api/client/ws/: index.html
master/api/enums/: index.html
master/api/exceptions/: index.html
master/api/models/: index.html
master/api/server/server/: index.html
master/api/typing/: index.html
master/api/utils/: index.html
master/examples/add-pulses/: index.html
master/examples/server/: index.html
master/examples/server-with-local-client/: index.html
master/examples/server_with_local_client/: index.html
master/examples/ws-client/: index.html
master/examples/ws_client/: index.html
master/faq/: index.html
master/more/: index.html
master/search/: search_index.json
master/usage/: index.html
master/usage/server/: index.html
pydglab_ws/: __init__.py  enums.py  exceptions.py  models.py  typing.py  utils.py
pydglab_ws/client/: __init__.py  base.py  connect.py  local.py  ws.py
pydglab_ws/server/: server.py
pydglabws/: __init__.py  enums.py  exceptions.py  models.py  typing.py  utils.py
pydglabws/client/: __init__.py  base.py  client.py  connect.py  local.py  local_client.py  ws.py  ws_client.py
pydglabws/server/: server.py
scripts/: pulse_data_db.py
tests/: app_simulator.py  conftest.py  test_main.py  test_models.py  test_utils.py
(+3 files in other folders)
